--- a/go/stickman-climb-2.html
+++ b/go/stickman-climb-2.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/murder.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/murder.png">
+                            <img src="https://sudoku-online.github.io/img/murder.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stack-bump-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stack-bump-3d.png">
+                            <img src="https://sudoku-online.github.io/img/stack-bump-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/rooftop-snipers.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/rooftop-snipers.png">
+                            <img src="https://sudoku-online.github.io/img/rooftop-snipers.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/car-rush.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/car-rush.png">
+                            <img src="https://sudoku-online.github.io/img/car-rush.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/short-ride.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/short-ride.png">
+                            <img src="https://sudoku-online.github.io/img/short-ride.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/city-car-driving-stunt-master.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/city-car-driving-stunt-master.png">
+                            <img src="https://sudoku-online.github.io/img/city-car-driving-stunt-master.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bitlife.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bitlife.png">
+                            <img src="https://sudoku-online.github.io/img/bitlife.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/who-is.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/who-is.png">
+                            <img src="https://sudoku-online.github.io/img/who-is.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/bob-the-robber-4.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/bob-the-robber-4.png">
+                            <img src="https://sudoku-online.github.io/img/bob-the-robber-4.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/slope.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/slope.png">
+                            <img src="https://sudoku-online.github.io/img/slope.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/top-speed-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/top-speed-3d.png">
+                            <img src="https://sudoku-online.github.io/img/top-speed-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/idle-digging-tycoon.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/idle-digging-tycoon.png">
+                            <img src="https://sudoku-online.github.io/img/idle-digging-tycoon.png">
                             <div class="product-badge">       
                             </div>
                         </div>
